Fix white gaps around the photo CTA image in article lists
This fixes the gaps in watchlist and nearby.

Also switch to higher definition image

--- a/less/specials/watchlist.less
+++ b/less/specials/watchlist.less
@@ -32,6 +32,8 @@
 	background-repeat: no-repeat;
 	background-position: center center;
 	&.needsPhoto {
+		.background-size(100%, auto);
+		background-color: #3b6fba;
 		background-image: url(images/camera.png);
 	}
 }
